--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Football Game Recorder</string>
+    <string name="blank_team"> </string>
     <string name="arizona_cardinals">Carson Palmer</string>
     <string name="atlanta_falcons">Matt Ryan</string>
     <string name="baltimore_ravens">Joe Flacco</string>
