--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,9 @@
         <item>Tennessee Titans</item>
         <item>Washington Redskins</item>
     </string-array>
+    <string-array name="scoring">
+        <item>Passing Stats</item>
+        <item>Receiving Stats</item>
+        <item>Rushing Stats</item>
+    </string-array>
 </resources>
